# tellegen

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PORT-PHASOR-TO-TELLEGEN-ARCHITECTURE.md  README.md  THIRD-PARTY-NOTICES.md  book.toml  deny.toml  docker-compose.yml  justfile  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: sdp-relaxation.md
.github/workflows/: ci.yml  deploy.yml  docs-pages.yml  npm-publish.yml
apps/web/: .npmignore  .prettierignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
apps/web/scripts/: hero-capture.mjs  keep-wasm-assets.mjs  smoke-build.mjs
apps/web/src/: app.css  app.html
apps/web/src/lib/: Sparkline.svelte  TellegenMap.svelte  api.ts  colors.ts  components.ts  context.svelte.ts  controller.svelte.ts  display.ts  format.ts  geo-file.ts  index.ts  map.ts  state.svelte.ts  synthetic-layout.ts  types.ts  wasm.ts
apps/web/src/lib/components/: AppFooter.svelte  AppHeader.svelte  ControlPanel.svelte  DemandSlider.svelte  DisplayControls.svelte  DropZone.svelte  FormulationSelector.svelte  LocalCaseDetails.svelte  NetworkStats.svelte  PlacementCue.svelte  RestoreDefaultsButton.svelte  SensitivityReadout.svelte  SeoHead.svelte  SizeLegend.svelte  SolveCard.svelte  TopMovers.svelte
apps/web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/src/routes/credits/: +page.svelte
apps/web/src/routes/privacy/: +page.svelte
apps/web/static/: robots.txt  sitemap.xml
apps/web/tests/: compute-disabled.spec.ts  demo-local-case.spec.ts  json-drop-routing.spec.ts  line-rating.spec.ts  rate-limit.spec.ts  study-package.spec.ts
apps/web/tests/fixtures/: backend-case.ts  local-case.ts
backend/: Project.toml  bootstrap.jl
backend/src/: app.jl  case_access.jl  coords.jl  layout.jl  server.jl  state.jl
backend/test/: runtests.jl
crates/benchmarks/: Cargo.toml  README.md
crates/benchmarks/src/: baseline.rs  corpus.rs  help.txt  main.rs  parity.rs  record.rs  report.rs  run.rs
crates/tellegen/: Cargo.toml  LICENSE-EPL  LICENSE-MIT  NOTICE  README.md
crates/tellegen-cli/: Cargo.toml
crates/tellegen-cli/src/: main.rs
crates/tellegen-core/: Cargo.toml  README.md
crates/tellegen-core/src/: api.rs  solve.rs
crates/tellegen-core/src/model/: ac.rs
crates/tellegen-core/src/problem/: pf_ac.rs
crates/tellegen-core/src/sens/: conic.rs  dc.rs
crates/tellegen-server/: Cargo.toml
crates/tellegen-server/src/: lib.rs  main.rs
crates/tellegen-wasm/: Cargo.toml  LICENSE  LICENSE-APACHE
crates/tellegen-wasm/src/: dist.rs  geo.rs  lib.rs
crates/tellegen-wasm/tests/: dropped_aux.rs
crates/tellegen/src/: api.rs  formulation.rs  geo.rs  lib.rs  session.rs  solve.rs  study.rs
crates/tellegen/src/model/: ac.rs  cases.rs  dc.rs  mod.rs
crates/tellegen/src/problem/: acopf.rs  acopf_pounce.rs  conic.rs  dc.rs  mod.rs  pf_ac.rs  pf_dc.rs
crates/tellegen/src/sens/: ac.rs  acopf.rs  conic.rs  contract.rs  dc.rs  mod.rs
deploy/: Caddyfile  DEPLOY.md  docker-compose.edge.yml  docker-compose.prod.yml  remote-deploy.sh
docs/: README.md  direction.md  display-format.md  geo-sidecars.md  real-coordinates.md  research-notes.md  synthetic-layout.md  tamu-coordinates.md
docs/src/: SUMMARY.md  architecture.md  benchmark-results.md  data-provenance.md  deployment.md  direction.md  display-data.md  engine-api.md  formulations.md  framework-quickstart.md  frontend-package.md  getting-started.md  http-api.md  introduction.md  local-case-files.md  methodology.md  privacy.md  references.md  release-architecture.md  research-notes.md  sensitivity-contract.md  synthetic-layout.md  tauri-roadmap.md  third-party-notices.md  transports.md  validation.md
docs/theme/: head.hbs  tellegen.css
examples/browser-minimal/: README.md  index.html  package-lock.json  package.json  tsconfig.json
examples/browser-minimal/src/: case14.ts  main.ts  style.css
examples/svelte-minimal/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/svelte-minimal/src/: App.svelte  main.ts  style.css
frontend/: package-lock.json  package.json
frontend/scripts/: smoke-build.mjs
frontend/src/: app.css  app.html
frontend/src/lib/: Sparkline.svelte  TellegenMap.svelte  api.ts  colors.ts  geo-file.ts  geo-sidecar.ts  state.svelte.ts  synthetic-layout.ts  wasm.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/privacy/: +page.svelte  +page.ts
reference/julia-backend/: Project.toml
reference/julia-backend/src/: coords.jl  server.jl  state.jl
reference/julia-backend/test/: runtests.jl
rust/: Cargo.toml  README.md
rust/fixtures/pglib/: pglib_opf_case200_activ.m  pglib_opf_case500_goc.m
rust/src/: dc.rs  geo.rs  lib.rs  server.rs
rust/src/dc/: api.rs  mod.rs  model.rs  sens.rs  solve.rs
rust/tests/: dropped_aux.rs
scripts/: build-docs.sh  stage-data.sh  svelte-packed-smoke.mjs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
