[workspace]
# The engine plus its three adapters and the non-shipping validation harness.
# `default-members` keeps a bare `cargo build`/`cargo test`/wasm gate scoped to the
# engine; the adapters and benchmarks build only when a command selects them.
members = [
  "crates/tellegen",
  "crates/tellegen-wasm",
  "crates/tellegen-server",
  "crates/tellegen-cli",
  "crates/benchmarks",
]
default-members = ["crates/tellegen"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/eigenergy/tellegen"

[workspace.dependencies]
# Caret range over the 0.6.x line (transmission `Network`, PSS/E v34/v35). The
# shared lockfile unifies the version across the engine and every adapter.
powerio = "0.7"
# The `.pio.json` document model. The wasm ingest path uses its public
# `ensure_payload_uids` so tellegen stamps the exact row-uid scheme powerio
# packages carry, instead of duplicating the format here.
powerio-pkg = "0.7"
# The multiconductor distribution model and its lossless readers for OpenDSS,
# PMD JSON, and BMOPF JSON. The wasm ingest path uses its string readers and
# `DistNetwork::graph()` projection to view distribution cases (no solve). Wasm
# checked upstream: `parse_str` and `graph()` touch no filesystem.
powerio-dist = "0.7"
# Matrix-free DC/AC OPF problem instances (`DcOpfInstance`/`AcOpfInstance`), the
# shared owner of case interpretation. Default features only: the `matrix` feature
# pulls a filesystem bundle writer that has no place in the wasm dependency chain.
powerio-prob = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared lints, opted into per crate with `[lints] workspace = true`. Kept modest so a
# `cargo clippy -- -D warnings` CI gate stays green: clippy's default `all`, plus guards
# against a stray `todo!`/`dbg!` reaching a shipped build.
[workspace.lints.clippy]
all = "warn"
todo = "warn"
dbg_macro = "warn"

# Profiles only take effect at the workspace root. `opt-level = "s"` + `lto` keep the
# browser wasm small (the size constraint that matters for the shipped app); the
# server inherits the same release profile.
[profile.release]
opt-level = "s"
lto = true
