[package]
name = "tellegen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "powerio parsing in the browser: case files never leave the machine"
repository = "https://github.com/eigenergy/tellegen"

[lib]
crate-type = ["cdylib", "rlib"]

# powerio's core parser is pure Rust over strings, so it compiles to
# wasm32-unknown-unknown as-is. For local powerio development, override
# with a [patch.crates-io] section.
[dependencies]
powerio = "0.2.2"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
