[package]
name = "tellegen"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "powerio parsing in the browser: case files never leave the machine"
repository = "https://github.com/eigenergy/tellegen"

[lib]
crate-type = ["cdylib", "rlib"]

# powerio's core parser is pure Rust over strings, so it compiles to
# wasm32-unknown-unknown as-is. For local powerio development, override
# with a [patch.crates-io] section.
[dependencies]
powerio = "0.2.2"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# DC OPF QP solver. Default features only: the BLAS/LAPACK/SDP paths stay off,
# so the build is pure Rust (QDLDL + amd) and compiles to wasm32 as-is.
clarabel = "0.11.1"
# Sparse LU for dLMP/dd. The core browser wasm builds with --no-default-features
# so Safari does not have to parse faer's wasm SIMD kernels at startup.
faer = { version = "0.24.0", default-features = false, features = ["std", "linalg", "sparse", "sparse-linalg"], optional = true }

[features]
default = ["sensitivity"]
sensitivity = ["dep:faer"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8.4"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "s"
lto = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
ureq = "3.3.0"
