[package]
name = "tellegen-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "powerio parsing in the browser: case files never leave the machine"

[lib]
crate-type = ["cdylib", "rlib"]

# powerio's core parser is pure Rust over strings, so it compiles to
# wasm32-unknown-unknown as-is. Point this at a published crate once
# powerio releases; until then, use the local workspace.
[dependencies]
powerio = { path = "../../../Research/powerio/powerio" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
