[package]
name = "benchmarks"
version = "0.0.0"
edition.workspace = true
publish = false
license = "Apache-2.0"
description = "PGLib-OPF validation and benchmark harness for tellegen. Non-shipping, native only."

[[bin]]
name = "pglib-bench"
path = "src/main.rs"

[dependencies]
# The engine, with every native-only backend on for parity coverage. The shared
# workspace lockfile unifies powerio across the API boundary.
tellegen = { path = "../tellegen", features = ["conic", "acopf", "acopf-pounce"] }
powerio.workspace = true
walkdir = "2"
rayon = "1"
csv = "1"
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
