[package]
name = "tellegen-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Command-line interface for the tellegen power flow engine (stateless JSON solves)."

[[bin]]
name = "tellegen"
path = "src/main.rs"

[dependencies]
# Default features (sensitivity): the convex/relaxation engine.
tellegen = { path = "../tellegen" }

[lints]
workspace = true
