[package]
name = "tellegen-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Differentiable power flow, optimal power flow, and sensitivities in Rust."
readme = "README.md"
keywords = ["opf", "power-flow", "differentiable", "sensitivity"]
categories = ["science", "mathematics"]

[dependencies]
powerio.workspace = true
# DC/conic OPF QP/SOCP solver. Default features only (QDLDL + amd), so it stays pure
# Rust and compiles to wasm32 as-is.
clarabel = "0.11.1"
# Sparse LU for the sensitivity solves. Optional so a consumer that only needs the
# solve can drop it (the browser core build does). 0.24.1 gates pulp's wasm
# relaxed-SIMD opcodes behind the `relaxed-simd` target feature, which the default
# wasm build does not set, so the sensitivity module validates on Safari without the
# pulp patch the old tellegen crate carried.
faer = { version = "0.24.1", default-features = false, features = ["std", "linalg", "sparse", "sparse-linalg"], optional = true }
# Complex bus admittance and the polar power flow Jacobian (AC paths). Pure Rust,
# already pulled by faer. Optional and tied to `sensitivity`.
num-complex = { version = "0.4", default-features = false, optional = true }
# Primal-dual interior-point NLP solver (MIPS) for the full nonlinear AC OPF, with its
# sparse matrix (sparsetools) and linear-solver (spsolve) crates. Optional, gated behind
# `acopf` (non-default, native-only). `step-control` enables the MIPS merit line search.
interiors = { version = "0.1", optional = true, features = ["step-control"] }
sparsetools = { version = "0.2", optional = true }
spsolve = { version = "0.1", optional = true, features = ["rlu"] }
# Alternative AC OPF backend: `pounce`, a pure-Rust Ipopt port. Gated behind
# `acopf-pounce` (non-default, native-only). EPL-2.0, so it never enters the
# default/permissive build.
pounce-nlp = { version = "0.6.0", optional = true }
pounce-algorithm = { version = "0.6.0", optional = true }
pounce-common = { version = "0.6.0", optional = true }
# The AC OPF backends pull `sparsetools` -> `rand` -> `getrandom`, which refuses
# wasm32-unknown-unknown unless its `js` feature is on. Tied to the AC OPF features so
# it never enters the default/core wasm build; inert on native targets.
getrandom = { version = "0.2", features = ["js"], optional = true }
serde.workspace = true
serde_json.workspace = true

[features]
default = ["sensitivity"]
sensitivity = ["dep:faer", "dep:num-complex"]
# The SOCWR (Jabr) conic relaxation of AC OPF and its KKT sensitivities. Solved with
# Clarabel's second-order cone support (already linked); the sensitivity reuses the faer
# paths, so `conic` pulls `sensitivity`. Additive, no new dependency.
conic = ["sensitivity"]
# The full nonlinear AC OPF, solved with the `interiors` NLP backend, plus its KKT
# sensitivities. Non-default and native-only. Pulls `conic` (the AC OPF warm-starts
# from the SOCWR relaxation).
acopf = ["conic", "dep:interiors", "dep:sparsetools", "dep:spsolve", "dep:getrandom"]
# Alternative AC OPF solver backend: the `pounce` Ipopt port. Implies `acopf`.
# Non-default, native-only, EPL-2.0 deps.
acopf-pounce = ["acopf", "dep:pounce-nlp", "dep:pounce-algorithm", "dep:pounce-common"]

[lints]
workspace = true
