[package]
name = "tellegen-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native HTTP demo and fallback server for the tellegen power flow engine."

[lib]
name = "tellegen_server"
path = "src/lib.rs"

[[bin]]
name = "tellegen-server"
path = "src/main.rs"

[dependencies]
# The engine, with default features (sensitivity). All solves and sensitivities go
# through it; the server owns only the HTTP transport and case staging.
tellegen = { package = "tellegen-core", path = "../tellegen-core" }
powerio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8.4"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = ["sensitivity"]
sensitivity = ["tellegen/sensitivity"]

[lints]
workspace = true
