[package]
name = "tellegen-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Native HTTP demo and fallback server for the tellegen power flow engine."

[lib]
name = "tellegen_server"
path = "src/lib.rs"

[[bin]]
name = "tellegen-server"
path = "src/main.rs"

[dependencies]
# The engine, with the convex/relaxation formulation set (DC power flow, DC optimal
# power flow, AC power flow, and the SOCWR conic relaxation) and sensitivities. The
# server owns only the HTTP transport and case staging.
tellegen = { path = "../tellegen" }
powerio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.8.4"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = ["sensitivity", "conic"]
sensitivity = ["tellegen/sensitivity"]
conic = ["tellegen/conic"]

[lints]
workspace = true
