[package]
name = "tellegen-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly browser adapter for the tellegen power flow engine."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The engine. Core wasm build takes it without default features (no faer); the
# `sensitivity` feature below forwards to `tellegen/sensitivity` for the sens build.
tellegen = { package = "tellegen-core", path = "../tellegen-core", default-features = false }
powerio.workspace = true
wasm-bindgen = "0.2"
serde.workspace = true
serde_json.workspace = true

[features]
default = []
sensitivity = ["tellegen/sensitivity"]
conic = ["tellegen/conic"]

[lints]
workspace = true
