[package]
name = "tellegen"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Differentiable power flow, optimal power flow, and sensitivities in Rust."
readme = "README.md"
keywords = ["opf", "power-flow", "differentiable", "sensitivity"]
categories = ["science", "mathematics"]

[dependencies]
powerio.workspace = true
# Matrix-free DC/AC OPF problem instances: the single owner of case interpretation
# (per-unit generator PQ bounds and costs, nodal demand, reference coverage) that
# `DcNetwork`/`AcNetwork` build on. Default features only, so the `matrix` bundle
# writer stays out of the wasm build.
powerio-prob.workspace = true
# The `.pio.json` document model, used by the Study save/load/export surface to
# stamp row uids and carry the edit log as a package study block. Optional and
# tied to `sensitivity`: only the Study path (which needs the differentiable
# engine) persists to a package, so the minimal core build never links it.
powerio-pkg = { workspace = true, optional = true }
# DC/conic OPF QP/SOCP solver. Default features only (QDLDL + amd), so it stays pure
# Rust and compiles to wasm32 as-is.
clarabel = "0.11.1"
# Sparse LU for the sensitivity solves. Optional so a consumer that only needs
# the solve can drop it (the browser core build does). faer pulls pulp with
# default features off and only `std`/`x86-v3`, so pulp's `relaxed-simd` feature
# is not part of the wasm sensitivity build.
faer = { version = "0.24.4", default-features = false, features = ["std", "linalg", "sparse", "sparse-linalg"], optional = true }
# Complex bus admittance and the polar power flow Jacobian (AC paths). Pure Rust,
# already pulled by faer. Optional and tied to `sensitivity`.
num-complex = { version = "0.4", default-features = false, optional = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# A multiconductor payload for the fail-closed load test that a study package must be
# balanced. Already in the tree via powerio-pkg; pinned to the same 0.7 line.
powerio-dist = "0.7.1"

[features]
default = ["sensitivity"]
sensitivity = ["dep:faer", "dep:num-complex", "dep:powerio-pkg"]
# The SOCWR (Jabr) conic relaxation of AC OPF and its KKT sensitivities. Solved with
# Clarabel's second-order cone support (already linked); the sensitivity reuses the faer
# paths, so `conic` pulls `sensitivity`. Additive, no new dependency.
conic = ["sensitivity"]

[lints]
workspace = true
